# dts-utils

./: .gitignore  AGENTS.md  API.md  CHANGELOG.md  CLI.md  DRAW-THINGS-GRPC-API.md  PROTOBUF.md  README.md  pyproject.toml
.cursor/: mcp-README.md  mcp.json
.cursor/plans/: dts-mcp-phase-1-mvp.plan.md
.github/workflows/: ci.yml  publish.yml
cursorrules/: 2026-04-27-drawthings-model-inspector.md  2026-04-28-web-history-keyboard.md  2026-04-29-grpc-model-browser-client.md  2026-05-02-generate-output-ms-timestamp.md  2026-05-02-grpc-test-strategy-notes.md  2026-05-02-readme-clarity-pass.md  2026-05-02-release-0.3.0-ci.md  2026-05-02-remove-dt-model-index-shim.md  2026-05-05-web-history-filesystem.md  2026-05-05-web-history-reuse.md  2026-07-22-web-generation-tiles-history.md
docs/: README.md  apple-infomux-pipeline-ops.md  mcp-for-agents.md  mcp-interface-plan.md  mcp-local-handoff.md  models-fetch-roadmap.md  setup-clean-install-z-image-turbo.md  smoke-multi-model-demo.md  web-api.md  web-ui-layout.md
docs/design/: dts-util-web-humane-layout.canvas.tsx
scripts/: generate_docs.py  generate_image.py  run-mcp.sh
src/dt_model_index/: __init__.py  cli.py  export.py  huggingface.py  local.py  parse.py  repo.py  search.py
src/dts_util/: __init__.py  cli_prog.py  cli_router.py  configs.py  configuration_build.py  exceptions.py  generate.py  generate_api.py  generation_stream.py  image_output.py  prompt_wildcards.py  tls_export.py
src/dts_util/grpc/: connection.py  reflect.py  utils.py
src/dts_util/grpc/proto/: __init__.py
src/dts_util/grpc/proto/upstream/: imageService.proto  imageService_pb2.py  imageService_pb2_grpc.py
src/dts_util/installer/: server_installer.py
src/dts_util/model_index/: __init__.py
src/dts_util/web/: __init__.py  app.py  cli.py
src/dts_util/web/templates/: index.html.j2
src/dts_utils/: __init__.py  cli_prog.py  cli_router.py  configs.py  configuration_build.py  doc_inventory.py  exceptions.py  generate.py  generate_api.py  generation_session.py  generation_stream.py  image_output.py  input_image.py  models_api.py  prompt_wildcards.py  tensor_png.py  tls_export.py
src/dts_utils/grpc/: __init__.py  connection.py  reflect.py  server_catalog.py  utils.py
src/dts_utils/grpc/proto/: image_generation.proto  image_generation_pb2.py  image_generation_pb2_grpc.py
src/dts_utils/grpc/proto/upstream/: config.fbs  imageService_pb2_grpc.py
src/dts_utils/installer/: __init__.py  server_installer.py
src/dts_utils/mcp/: __init__.py  client_options.py  env.py  errors.py  http_auth.py  lifecycle.py  paths.py  resources.py  serialize.py  server.py  tools.py
src/dts_utils/model_fetch/: __init__.py  download.py  errors.py  recipes.py  runner.py
src/dts_utils/model_fetch/recipe_files/: __init__.py  ltx-2.3-22b-distilled-exact.json  registry.json  sdxl-turbo.json  z-image-turbo-1.0-exact.json
src/dts_utils/model_index/: cli.py  huggingface.py  local.py  parse.py
src/dts_utils/pipeline/: __init__.py  apple_ops.py  cache.py  cleanup.py  cli.py  contracts.py  executors.py  generate_dispatch.py  profile.py  run_plan.py  runner.py  video_encode.py  worker.py
src/dts_utils/pipeline/profile_templates/: prompt-to-video.json
src/dts_utils/web/: __init__.py  app.py  cli.py  defaults.py  launch_agent.py  log_io.py
src/dts_utils/web/templates/: index.html.j2
src/dts_utils/web/templates/partials/: _composer.html.j2  _dialogs.html.j2  _fabs.html.j2  _script.html.j2  _stage.html.j2  _styles.html.j2
tests/: README.md  conftest.py  ephemeral_grpc_server.py  test_cli_commands.py  test_cli_help.py  test_cli_prog.py  test_configs_command.py  test_configuration_build.py  test_docs_drift.py  test_ephemeral_grpc_server.py  test_generate_api.py  test_generate_functional_live.py  test_generate_image_script.py  test_generate_pipeline_dispatch.py  test_generation_stream.py  test_grpc_live_cli.py  test_grpc_server.py  test_grpc_utils.py  test_input_image.py  test_installer.py  test_mcp_client_options.py  test_mcp_http_transport.py  test_mcp_lifecycle.py  test_mcp_resources.py  test_mcp_server.py  test_model_fetch_manifest.py  test_model_index.py  test_models_api.py  test_models_fetch.py  test_pipeline_apple_ops.py  test_pipeline_cache.py  test_pipeline_cleanup.py  test_pipeline_cli.py  test_pipeline_contracts.py  test_pipeline_drawthings_i2v.py  test_pipeline_executors.py  test_pipeline_profile.py  test_pipeline_run_plan_execution.py  test_pipeline_runner.py  test_prompt_wildcards.py  (+10 more)
tests/fixtures/pipeline_profiles/: infomux.json
