[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "dts-util"
version = "0.2.0"
description = "Utilities for installing and interacting with Draw Things gRPCServerCLI."
readme = "README.md"
requires-python = ">=3.12,<4"
license = { text = "MIT" }
dependencies = [
    "fpzip>=1.2.5",
    "grpcio>=1.80.0",
    "grpcio-reflection>=1.80.0",
    "grpcio-tools>=1.80.0",
    "numpy>=2.4.4",
    "pillow>=12.2.0",
    "protobuf>=4.23.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: optional tests that assume a reachable gRPC server or local models.",
]

[tool.coverage.run]
branch = true
source = ["src"]
omit = [
    "src/dts_util/grpc/proto/*.py",
    "src/dts_util/grpc/proto/upstream/*.py",
]

[project.scripts]
dts-util = "dts_util.installer.server_installer:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
