[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "dts-utils"
version = "0.5.2"
description = "Utilities for installing and interacting with Draw Things gRPCServerCLI."
readme = "README.md"
requires-python = ">=3.12,<4"
license = { text = "MIT" }
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
]
dependencies = [
    "fpzip>=1.2.5",
    "grpcio>=1.80.0",
    "jinja2>=3.1.0",
    "grpcio-reflection>=1.80.0",
    "grpcio-tools>=1.80.0",
    "numpy>=2.4.4",
    "pillow>=12.2.0",
    "protobuf>=4.23.1",
    "starlette>=0.38.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.27.0",
    "huggingface_hub>=0.23.0,<1.0",
]
download = ["huggingface_hub>=0.23.0,<1.0"]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.27.0",
    "huggingface_hub>=0.23.0,<1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]
addopts = "-m 'not live_grpc_cli'"
markers = [
    "integration: optional tests that assume a reachable gRPC server or local models.",
    "live_grpc_cli: opt-in tests that spawn gRPCServerCLI (set DTS_GRPC_TEST_SPAWN_SERVER=1).",
]

[tool.coverage.run]
branch = true
source = ["src"]
omit = [
    "src/dts_utils/grpc/proto/*.py",
    "src/dts_utils/grpc/proto/upstream/*.py",
]

[project.scripts]
dts-utils = "dts_utils.cli_router:main"

[project.urls]
Repository = "https://github.com/funkatron/dts-utils"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"dts_utils.web" = ["templates/*.j2"]
"dts_utils.model_fetch.recipe_files" = ["*.json"]
"dts_utils.pipeline" = ["profile_templates/*.json"]
